# DataIntroProject1

./: .env  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
data/: annual_weather_data_2023.csv  cleaned_annual_weather_data_2023.csv  elec_cons_finland_2023.csv  elec_prices_2023.csv  elec_prod_finland_2023.csv  elec_prod_pred_2023.csv  electricity_prices_2023.csv  electricity_prices_2023.xlsx  evaluation_results.csv  jan23_annual_weather_data.csv  solar_prod_pred_2023.csv  weather_data_012022_092024.csv  wind_prod_pred_2023.csv
src/: app.py  check_fmi.py  combine_fmi_csvs.py  data_2023.csv  data_combiner.py  data_compiler.py  data_functions.py  data_test_config.py  dataframe_handler.py  dummy_data.py  fmi_config.py  fmi_request.py  model_predict.py  model_spinner.py  porssisahko.py  porssisahko_elec_prices.py  porssisahko_request.py  prediction_data_request.py  request_builder.py
