[tool.poetry]
name = "dataintroproject1"
version = "0.1.0"
description = "Data science project, prediction of CO2 emissions for next day"
authors = ["Vilppula <lasse.vilpponen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
