[tool.poetry]
name = "dataintroproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
pandas = "^2.2.2"
dash = "^2.18.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
numpy = "^2.1.1"
fmiopendata = "^0.4.3"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
